【新增】增加自定义控件-Button

--- a/demo1/android/有用的命令行合集.md
+++ b/demo1/android/有用的命令行合集.md
@@ -5,10 +5,17 @@
 adb reverse tcp:8081 tcp:8081
 ```
 
-配置as
+##配置as，主要是拉取bundle
 
 ```java
 react-native bundle –-platform android --dev false --entry-file /Users/lixinkun/Codes/React/react-native-demo1/demo1/index.android.js --bundle-output /Users/lixinkun/Codes/React/react-native-demo1/demo1/android/app/src/main/assets/index.android.bundle --sourcemap-output /Users/lixinkun/Codes/React/react-native-demo1/demo1/android/app/src/main/assets/index.android.map –-assets-dest /Users/lixinkun/Codes/React/react-native-demo1/demo1/android/app/src/main/res/
+```
+
+##拉取bundle的另外一种方式：
+
+```java
+//bundle已经生成，只要复制过去到相应的文件即可
+curl -k 'http://localhost:8081/index.android.bundle' > /Users/lixinkun/Desktop/assets/index.android.bundle
 ```
 
 keystore生成
